# TruePsisProj

./: CMakeLists.txt  Client.c  ManualClient.c  MegaBot.c  Server.c  UI_library.c  UI_library.h  a.out  board_library.c  board_library.h  firstBot.c  gameConnection.c  gameConnection.h  memory-single.c  randomClient.c
